Start exercise2-add statement and first_paragraph

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -356,6 +356,81 @@
     "print('Author      : ', author)\n",
     "print('Photographer: ', photographer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2:\n",
+    "\n",
+    "Using the first paragraph:\n",
+    "1. How many words are in the first paragraph?\n",
+    "2. How many sentences are in the first paragraph?\n",
+    "3. How many times is the word 'Obama' is in the first paragraph?\n",
+    "4. If you remove all of the punctuation and lower case all text, how many words?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " **Note**: Here I break the paragraph so it's not a long line of code. If we look th output of `repr(first_paragraph)` you will notice more `\\n`. Don't worry, we will strip the out anyways. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "first_paragraph = \"\"\"\n",
+    "In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\n",
+    "the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\n",
+    "many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\n",
+    "nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \n",
+    "Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. The\n",
+    "moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the expense \n",
+    "of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a student who\n",
+    "would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap\n",
+    "Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the smile that had \n",
+    "launched America’s first black presidency, and started dancing again. Three months still remained before \n",
+    "Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride and \n",
+    "longing—like college seniors in early May. They had no sense of the world they were graduating into. None of us did.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'\\\\nIn the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\\\\nthe full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\\\\nmany of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\\\\nnominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \\\\nClinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. The\\\\nmoment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the expense \\\\nof Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a student who\\\\nwould be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap\\\\nBand’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the smile that had \\\\nlaunched America’s first black presidency, and started dancing again. Three months still remained before \\\\nInauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride and \\\\nlonging—like college seniors in early May. They had no sense of the world they were graduating into. None of us did.\\\\n'\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repr(first_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
