Add solution of exercise 2 part 1 (word count)

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -390,20 +390,21 @@
     "the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\n",
     "many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\n",
     "nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \n",
-    "Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. The\n",
-    "moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the expense \n",
-    "of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a student who\n",
-    "would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap\n",
-    "Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the smile that had \n",
-    "launched America’s first black presidency, and started dancing again. Three months still remained before \n",
-    "Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride and \n",
-    "longing—like college seniors in early May. They had no sense of the world they were graduating into. None of us did.\n",
+    "Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. \n",
+    "The moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the\n",
+    "expense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a\n",
+    "student who would be introducing him by dancing toward her and then noting that the song playing over the\n",
+    "loudspeakers—the Gap Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the\n",
+    "smile that had launched America’s first black presidency, and started dancing again. Three months still remained\n",
+    "before Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride\n",
+    "and longing—like college seniors in early May. They had no sense of the world they were graduating into. None of\n",
+    "us did.\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -411,16 +412,182 @@
     {
      "data": {
       "text/plain": [
-       "\"'\\\\nIn the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\\\\nthe full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\\\\nmany of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\\\\nnominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \\\\nClinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. The\\\\nmoment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the expense \\\\nof Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a student who\\\\nwould be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap\\\\nBand’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the smile that had \\\\nlaunched America’s first black presidency, and started dancing again. Three months still remained before \\\\nInauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride and \\\\nlonging—like college seniors in early May. They had no sense of the world they were graduating into. None of us did.\\\\n'\""
+       "\"'\\\\nIn the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\\\\nthe full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\\\\nmany of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\\\\nnominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \\\\nClinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. \\\\nThe moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the\\\\nexpense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a\\\\nstudent who would be introducing him by dancing toward her and then noting that the song playing over the\\\\nloudspeakers—the Gap Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the\\\\nsmile that had launched America’s first black presidency, and started dancing again. Three months still remained\\\\nbefore Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride\\\\nand longing—like college seniors in early May. They had no sense of the world they were graduating into. None of\\\\nus did.\\\\n'\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "repr(first_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How many words are in the first paragraph?\n",
+    "\n",
+    "To answer answer this question let's first split our paragraph and save the result in a list. We will have plenty of elements that are not words but we will remove them from our list if we need it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "split_paragraph = first_paragraph.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a look at the split paragraph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['In', 'the', 'waning', 'days', 'of', 'President', 'Barack', 'Obama’s', 'administration,', 'he', 'and', 'his', 'wife,', 'Michelle,', 'hosted', 'a', 'farewell', 'party,', 'the', 'full', 'import', 'of', 'which', 'no', 'one', 'could', 'then', 'grasp.', 'It', 'was', 'late', 'October,', 'Friday', 'the', '21st,', 'and', 'the', 'president', 'had', 'spent', 'many', 'of', 'the', 'previous', 'weeks,', 'as', 'he', 'would', 'spend', 'the', 'two', 'subsequent', 'weeks,', 'campaigning', 'for', 'the', 'Democratic', 'presidential', 'nominee,', 'Hillary', 'Clinton.', 'Things', 'were', 'looking', 'up.', 'Polls', 'in', 'the', 'crucial', 'states', 'of', 'Virginia', 'and', 'Pennsylvania', 'showed', 'Clinton', 'with', 'solid', 'advantages.', 'The', 'formidable', 'GOP', 'strongholds', 'of', 'Georgia', 'and', 'Texas', 'were', 'said', 'to', 'be', 'under', 'threat.', 'The', 'moment', 'seemed', 'to', 'buoy', 'Obama.', 'He', 'had', 'been', 'light', 'on', 'his', 'feet', 'in', 'these', 'last', 'few', 'weeks,', 'cracking', 'jokes', 'at', 'the', 'expense', 'of', 'Republican', 'opponents', 'and', 'laughing', 'off', 'hecklers.', 'At', 'a', 'rally', 'in', 'Orlando', 'on', 'October', '28,', 'he', 'greeted', 'a', 'student', 'who', 'would', 'be', 'introducing', 'him', 'by', 'dancing', 'toward', 'her', 'and', 'then', 'noting', 'that', 'the', 'song', 'playing', 'over', 'the', 'loudspeakers—the', 'Gap', 'Band’s', '“Outstanding”—was', 'older', 'than', 'she', 'was.', '“This', 'is', 'classic!”', 'he', 'said.', 'Then', 'he', 'flashed', 'the', 'smile', 'that', 'had', 'launched', 'America’s', 'first', 'black', 'presidency,', 'and', 'started', 'dancing', 'again.', 'Three', 'months', 'still', 'remained', 'before', 'Inauguration', 'Day,', 'but', 'staffers', 'had', 'already', 'begun', 'to', 'count', 'down', 'the', 'days.', 'They', 'did', 'this', 'with', 'a', 'mix', 'of', 'pride', 'and', 'longing—like', 'college', 'seniors', 'in', 'early', 'May.', 'They', 'had', 'no', 'sense', 'of', 'the', 'world', 'they', 'were', 'graduating', 'into.', 'None', 'of', 'us', 'did.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(split_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can notice, the punctuation doesn't the word count because the symbols are attached to the previous word. However, the em dash '—' symbol links two words and that will affect the count, so let's replace them with a space so when we split by spaces it will do what we want.\n",
+    "If you don't have the em dash symbol in your keyword you can generate it by doing `Ctrl+Shift+u+2014`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "revised_paragraph = first_paragraph "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for element in revised_paragraph:\n",
+    "    if element == '—':\n",
+    "        revised_paragraph = revised_paragraph.replace(element, ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\n",
+      "the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\n",
+      "many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\n",
+      "nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \n",
+      "Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. \n",
+      "The moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the\n",
+      "expense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a\n",
+      "student who would be introducing him by dancing toward her and then noting that the song playing over the\n",
+      "loudspeakers the Gap Band’s “Outstanding” was older than she was. “This is classic!” he said. Then he flashed the\n",
+      "smile that had launched America’s first black presidency, and started dancing again. Three months still remained\n",
+      "before Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride\n",
+      "and longing like college seniors in early May. They had no sense of the world they were graduating into. None of\n",
+      "us did.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(revised_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now our revised_paragraph is the same than the first paragraph but without the \"em dashes\" . Let's split it and then count the words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "split_paragraph = revised_paragraph.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To count the words we just need to know the length of our list. To do that we use `len()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "words = len(split_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of words in first_paragraph is:  232\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The amount of words in first_paragraph is: ', words)"
    ]
   },
   {
